Fix text wrap on hover

--- a/css/menu.css
+++ b/css/menu.css
@@ -145,17 +145,21 @@
     visibility: visible;
 }
 
-.plat-subtitle{
+.plat-subtitle {
     font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 10px;
 }
 
-.omf_black{
+.omf_black {
     color: black;
 }
 
 
 
-.fa-heart{
+.fa-heart {
     margin-right: 20px;
 }
 
@@ -167,10 +171,4 @@
     transition-property: all;
     transition-duration: 0.5s;
     margin-left: 306px;
-  }
-
-
-
-  
-
-
+}
